<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="303dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvImageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Image Title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvImageDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Artist"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/tvImageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvCulture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:autoLink="web"
        android:gravity="center"
        android:text="Culture"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvImageDescription" />

    <TextView
        android:id="@+id/tvRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:autoLink="web"
        android:gravity="center"
        android:text="Region"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCulture" />


    <Button
        android:id="@+id/next_image_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"

        android:layout_marginEnd="40dp"
        android:layout_marginBottom="-20dp"
        android:background="@drawable/button_ripple"
        android:drawablePadding="8dp"
        android:elevation="4dp"
        android:padding="12dp"
        android:stateListAnimator="@null"
        android:text="@string/image_button"
        android:textSize="18sp"
        app:icon="@drawable/button_background"
        app:layout_constraintBottom_toTopOf="@+id/load_image_meta_data_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegion" />

    <Button
        android:id="@+id/load_image_meta_data_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"

        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_ripple"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:text="@string/load_all_images"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioPlayerControl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_image_button" />

    <LinearLayout
        android:id="@+id/radioPlayerControl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="40dp"

        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_image_meta_data_button"
        app:layout_constraintVertical_bias="0.964">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/prevStationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/prev_station_description"
            android:insetTop="0dp"
            android:insetBottom="0dp"

            app:icon="@android:drawable/ic_media_previous"
            app:iconPadding="0dp"
            app:iconTint="#CB3E2E2E" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playPauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/play_station_description"
            android:src="@android:drawable/ic_media_play"
            app:backgroundTint="#CB3E2E2E" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextStationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/next_station_description"
            android:insetTop="0dp"
            android:insetBottom="0dp"

            app:icon="@android:drawable/ic_media_next"
            app:iconPadding="0dp"
            app:iconTint="#CB3E2E2E" />

        <SeekBar
            android:id="@+id/volumeControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxWidth="150dp" />

    </LinearLayout>

    <Button
        android:id="@+id/checkKnowledgeButton"
        android:layout_width="324dp"
        android:layout_height="70dp"
        android:layout_marginBottom="572dp"
        android:gravity="top|center_horizontal"
        android:text="READY?\nCheck Your Knowledge"
        android:textSize="20sp"
        android:visibility="gone"
        android:onClick="navigateToDashboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>